# Embroidery-Stitch-File-Catalog

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: Embroidery Stitch File Catalog.py
src/Embroidery_Stitch_File_Catalog/: Embroidery_Stitch_File_Catalog.py  config.ini
src/embroidery_stitch_file_catalog/: embroidery_stitch_file_catalog.py
